# TFYB05

./: IMPLEMENTATION_NOTES.md  README.md  README_UNIT_FIX.md  TFYB05_improvements_phase1.patch  TFYB05_unit_fix.patch  problems_svenska.py  pyproject.toml  requirements.txt  smoke_test.py  smoke_test_plotly.py  smoke_test_theory.py  streamlit_app.py
em_visualisering/: __init__.py  __main__.py  app.py  checks.py  core.py  modes.py  parameter_catalog.py  parameters.py  plotly_bridge.py  registry.py  theory_pages.py  unit_scaling.py
em_visualisering/problems/: __init__.py  ch02.py  ch03.py  ch04.py  ch05.py  ch06.py  ch07.py  ch08.py  ch09.py  ch10.py
tests/: test_parameters.py  test_problem_contracts.py  test_render_smoke.py  test_streamlit_app.py  test_unit_scaling.py  test_unit_selector.py
