[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "tfyb05-em-visualiseringar"
version = "0.3.0"
description = "Interactive electromagnetic-field visualisations for TFYB05"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "matplotlib>=3.8,<4",
  "numpy>=1.26,<3",
  "plotly>=5.20,<7",
  "streamlit>=1.48,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<10",
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["em_visualisering*"]
